# Tutorial-flask-templates-live-107

./: .gitignore  README.md  config.py  main.py  pyproject.toml
app/: __init__.py  routes.py
app/filters/: __init__.py
src/static/css/: core.css
src/templates/: about.html  home.html  login.html  testing.html
src/templates/components/: forms.html  navbar.html  notifications.html
src/templates/layouts/: base.html
