[tool.poetry]
name = "flask-templates-live-107"
version = "0.1.0"
description = "Flask template structure for project API"
authors = ["marcusmariano <marcusney@gmail.com>"]
license = "GPL-3.0"
homepage = "https://marcusmariano.github.io/mmariano/"
repository = "https://github.com/Flask-Examples/flask-templates-live-107"
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.7"
flask = ">=1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
